--- a/docker/config/apache/httpd.conf
+++ b/docker/config/apache/httpd.conf
@@ -306,7 +306,7 @@ DocumentRoot "/usr/local/apache2/htdocs"
 </Files>
 
 <FilesMatch \.php$>
-    SetHandler "proxy:fcgi://docker-stack-starter-pack_php_fpm:9000"
+    SetHandler "proxy:fcgi://mydocker_php_fpm:9000"
 </FilesMatch>
 
 #
