--- a/docker/config/apache/vhost.conf
+++ b/docker/config/apache/vhost.conf
@@ -1,5 +1,5 @@
 <VirtualHost *:80>
-    ServerName www.docker-stack-starter-pack.dpdev
+    ServerName www.mydocker.dpdev
 
     DocumentRoot /home/site/app/www/web
     <Directory /home/site/app/www/web>
