--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
         - DEV_UID=$DEV_UID
         - DEV_GID=$DEV_GID
     volumes:
-      - "./:/home/site/app/www:rw"
+      - "${PWD}:/home/site/app/www:rw"
       - "./docker/config/apache/httpd.conf:/usr/local/apache2/conf/httpd.conf:ro"
       - "./docker/config/apache/vhost.conf:/usr/local/apache2/conf/vhost.conf:ro"
       - "mydocker_apachelogs:/var/log/app"
@@ -25,7 +25,7 @@ services:
         - DEV_UID=$DEV_UID
         - DEV_GID=$DEV_GID
     volumes:
-      - "./:/home/site/app/www:rw"
+      - "${PWD}/:/home/site/app/www:rw"
       - "./docker/config/fpm/www.conf:/usr/local/etc/php-fpm.d/www.conf"
       - "./docker/config/fpm/bashrc:/home/site/.bashrc"
       - "./docker/config/fpm/custom_conf.ini:/usr/local/etc/php/conf.d/custom_config.ini"
